fix overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,6 +16,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   background: $lightGrey;
+  overflow-x: hidden;
 }
 
 a {
